--- a/caservice/css/style.css
+++ b/caservice/css/style.css
@@ -34,8 +34,12 @@ line-height: 1.5;
   display: block;
 }
 #wrapper{
+  /*background-color: #000;*/
   width: 1400px;
   margin: 0 auto;
+}
+#wrappertop{
+  background-color: #000;
 }
 
 #toplogo{
@@ -140,7 +144,13 @@ figcaption{
 figure:hover figcaption {
   	opacity: 1;
   }
-
+/*#serviceinfot{
+  width: 1400px;
+  background-color: #ffffff;
+}*/
+/*#serviceinfo{
+    background-color: #ffffff;
+  }*/
 .serviceinfo1{
   margin-left: 115px;
   width: 1090px;
@@ -175,6 +185,10 @@ figure:hover figcaption {
 #newrelease{
   width: 1171px;
 }
+
+/*#release{
+  background-color: #ffffff;
+}*/
 #newrelease img{
   width: 212px;
   height: 53px;
@@ -265,6 +279,9 @@ footer ul{
 #fnav li{
   font-size: 12px;
   color: #ffffff;
+}
+#fnav li:hover{
+  color: #5555555;
 }
 footer p{
   margin-top: 20px;
